--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -3,32 +3,46 @@ import Container from "@components/container.astro";
 import Link from "@components/ui/link.astro";
 import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 
 const menuitems = [
   {
-    title: "Features",
-    path: "#",
+    string: "nav.home",
+    path: `${lang}/about/`,
+  },
+  {
+    string: "nav.expertise",
+    // path: "#",
+    path: `${lang}`,
     children: [
-      { title: "Action", path: "#" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
+      { string: "Action", path: "#" },
+      { string: "Another action", path: "#" },
+      { string: "Dropdown Submenu", path: "#" },
     ],
   },
   {
-    title: "Pricing",
-    path: "/pricing",
+    string: "nav.contribute",
+    path: `${lang}/contribute/`,
+    children: [
+      { string: "Action", path: "#" },
+      { string: "Another action", path: "#" },
+      { string: "Dropdown Submenu", path: "#" },
+    ],
   },
   {
-    title: "About",
-    path: "/about",
+    string: "nav.blog",
+    path: `${lang}/blog/`,
   },
   {
-    title: "Blog",
-    path: "/blog",
+    string: "nav.team",
+    path: `${lang}/team/`,
   },
   {
-    title: "Contact",
-    path: "/contact",
+    string: "nav.contact",
+    path: `${lang}/contact/`,
   },
 ];
 ---
@@ -37,10 +51,9 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
-          >
+        <a href="/fr" class="text-lg">
+            <span class="font-bold text-slate-800">Ethosph'</span>
+            <span class="text-green-500 animate-pulse">R</span>
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
@@ -53,7 +66,7 @@ const menuitems = [
               <>
                 {item.children && (
                   <Dropdown
-                    title={item.title}
+                    title={t(item.string)}
                     children={item.children}
                     lastItem={index === menuitems.length - 1}
                   />
@@ -64,7 +77,7 @@ const menuitems = [
                     <a
                       href={item.path}
                       class="flex lg:px-3 py-2 text-gray-600 hover:text-gray-900">
-                      {item.title}
+                      {t(item.string)}
                     </a>
                   </li>
                 )}
@@ -72,17 +85,17 @@ const menuitems = [
             ))
           }
         </ul>
-        <div class="lg:hidden flex items-center mt-3 gap-4">
+        <!-- <div class="lg:hidden flex items-center mt-3 gap-4">
           <Link href="#" style="muted" block size="md">Log in</Link>
           <Link href="#" size="md" block>Sign up</Link>
-        </div>
+        </div> -->
       </MenuItems>
     </Astronav>
-    <div>
+    <!-- <div>
       <div class="hidden lg:flex items-center gap-4">
         <a href="#">Log in</a>
         <Link href="#" size="md">Sign up</Link>
       </div>
-    </div>
+    </div> -->
   </header>
 </Container>
