commit will be amended

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -42,7 +42,7 @@ import { Icon } from "astro-icon";
         rel="noopener">
         <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
 
-        Download for Free
+        Faire un Don
       </Link>
       <Link
         size="lg"
@@ -51,8 +51,7 @@ import { Icon } from "astro-icon";
         href="https://github.com/surjithctly/astroship"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-        GitHub Repo
+        Devenir adhérent
       </Link>
     </div>
   </div>
