--- a/src/pages/fr/blog.astro
+++ b/src/pages/fr/blog.astro
@@ -14,6 +14,10 @@ const publishedBlogEntries = await getCollection("blog", ({ data }) => {
 publishedBlogEntries.sort(function (a, b) {
   return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
 });
+const res = await fetch("https://ethosphr.com/wp-json/wp/v2/posts")
+
+const posts = await res.json()
+
 ---
 
 <Layout title="Blog">
