- Added language picker - Customization must ensue ... I think text AND flag are the way to go: better clarity for users

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -4,6 +4,7 @@ import Link from "@components/ui/link.astro";
 import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+import LanguagePicker from "./languagepicker.astro";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -88,6 +89,7 @@ const menuitems = [
           <Link href="#" size="md" block>Sign up</Link>
         </div> -->
       </MenuItems>
+      <LanguagePicker />
     </Astronav>
     <!-- <div>
       <div class="hidden lg:flex items-center gap-4">
