--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,10 @@
 <footer class="my-20">
   <p class="text-center text-sm text-slate-500">
-    Copyright © {new Date().getFullYear()} Astroship. All rights reserved.
+    Association inscrite au Registre des Associations du tribunal de Schiltigheim
+    <br>Siret: 828 592 436 00020
+    <br>Siège social: 12 rue de Cronenbourg, 67300 Schiltigheim
   </p>
+
   <!--
     Can we ask you a favor 🙏
     Please keep this backlink on your website if possible.
