- Navigation from/to the home button is now working as expected - the default language in the url is now /fr - A new page has been added: expertise

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,7 +12,7 @@ const t = useTranslations(lang);
 const menuitems = [
   {
     string: "nav.home",
-    path: `about`,
+    path: `/`,
   },
   {
     string: "nav.expertise",
@@ -50,7 +50,7 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/fr" class="text-lg">
+        <a href="/" class="text-lg">
             <span class="font-bold text-slate-800">Ethosph'</span>
             <span class="text-green-500 animate-pulse">R</span>
         </a>
