--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -1,5 +1,8 @@
 ---
+import { getLangFromUrl, useTranslations } from "i18n/utils";
 import Button from "./ui/button.astro";
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <!-- To make this contact form work, create your free access key from https://web3forms.com/
@@ -16,7 +19,7 @@ import Button from "./ui/button.astro";
   <div class="mb-5">
     <input
       type="text"
-      placeholder="Full Name"
+      placeholder={t('page.contact.form.name')}
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
       name="name"
@@ -29,7 +32,7 @@ import Button from "./ui/button.astro";
     <label for="email_address" class="sr-only">Email Address</label><input
       id="email_address"
       type="email"
-      placeholder="Email Address"
+      placeholder={t('page.contact.form.email')}
       name="email"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
@@ -45,14 +48,14 @@ import Button from "./ui/button.astro";
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder={t('page.contact.form.message')}
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Please enter your message.
     </div>
   </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
+  <Button type="submit" size="lg" block>{t('page.contact.form.send')}</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
