--- a/src/components/navbar/languagepicker.astro
+++ b/src/components/navbar/languagepicker.astro
@@ -1,10 +1,13 @@
 ---
 import { languages } from '../../i18n/ui';
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(4); // remove the first "/"
+
 ---
 <ul class="flex space-x-2">
   {Object.entries(languages).map(([lang, label]) => (
     <li>
-      <a href={`/${lang}/`}>{label}</a>
+      <a href={`/${lang}/${currentPath}`}>{label}</a>
     </li>
   ))}
 </ul>
