--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,12 +3,14 @@ import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource/inter/variable.css";
+import { getLangFromUrl } from "i18n/utils";
 
 export interface Props {
   title: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
+const currentPage = new URL(Astro.request.url).pathname.slice(1);
 
 const resolvedImageWithDomain = new URL(
   "/opengraph.jpg",
@@ -17,17 +19,16 @@ const resolvedImageWithDomain = new URL(
 
 const { title } = Astro.props;
 
-const makeTitle = title
-  ? title + " | " + "Astroship"
-  : "Astroship - Starter Template for Astro with Tailwind CSS";
+const lang = getLangFromUrl(Astro.url);
+const makeTitle = title ? ("Ethosph'R | " + currentPage) : "Ethosph'R";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang={lang}>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.jpeg" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
@@ -44,7 +45,7 @@ const makeTitle = title
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Ethosph'R`,
+          title: `Ethosph'R website`,
           image: resolvedImageWithDomain,
         },
         image: {
