--- a/src/pages/[lang]/blog.astro
+++ b/src/pages/[lang]/blog.astro
@@ -14,6 +14,17 @@ const publishedBlogEntries = await getCollection("blog", ({ data }) => {
 publishedBlogEntries.sort(function (a, b) {
   return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
 });
+const res = await fetch("https://ethosphr.com/wp-json/wp/v2/posts")
+
+const posts = await res.json()
+
+export function getStaticPaths () {
+ return [
+    {params: {lang: 'en'}},
+    {params: {lang: 'fr'}},
+  ];
+}
+
 ---
 
 <Layout title="Blog">
