--- a/src/pages/[lang]/expertise.astro
+++ b/src/pages/[lang]/expertise.astro
@@ -2,6 +2,12 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
+export function getStaticPaths () {
+ return [
+    {params: {lang: 'en'}},
+    {params: {lang: 'fr'}},
+  ];
+}
 ---
 
 <Layout title="Expertise">
