--- a/src/pages/[lang]/home.astro
+++ b/src/pages/[lang]/home.astro
@@ -6,6 +6,12 @@ import Footer from "@components/footer.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+export function getStaticPaths () {
+ return [
+    {params: {lang: 'en'}},
+    {params: {lang: 'fr'}},
+  ];
+}
 ---
 <Layout title="">
   <Container>
