--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,5 @@
 ---
-import { Picture } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import IconImage from "assets/icon.jpeg";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
@@ -15,10 +15,11 @@ import { Icon } from "astro-icon";
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <Picture
+    <Image
       src={IconImage}
       alt="Astronaut in the air"
-      widths={[200, 400, 600]}
+      width={200}
+      height={400}
       sizes="(max-width: 200px) 50vw, 255px"
       loading="eager"
       format="avif"
