- added blog articles with sanity as a source 	- for images, we are using my very own function getSanityImageURL to sanitize the URL 	- the part of the URL containing private information has been stored as an environment variable

--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -21,8 +21,8 @@ export function getStaticPaths () {
 <Layout title="Contact">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">{t('nav.contact.title')}</Fragment>
-      <Fragment slot="desc">{t('nav.contact.desc')}</Fragment>
+      <Fragment slot="title">{t('page.contact.title')}</Fragment>
+      <Fragment slot="desc">{t('page.contact.desc')}</Fragment>
     </Sectionhead>
 
     <div class="mx-auto max-w-2xl mt-16">
