--- a/src/pages/[lang]/blog.astro
+++ b/src/pages/[lang]/blog.astro
@@ -4,19 +4,18 @@ import { Image } from "astro:assets";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
+import { useSanityClient } from "@sanity/astro";
+import { getSanityImageURL } from "@utils/all";
 
-// Filter blog entries with 'draft: false' & date before current date
-const publishedBlogEntries = await getCollection("blog", ({ data }) => {
-  return !data.draft && data.publishDate < new Date();
-});
-
-// Sort content entries by publication date
-publishedBlogEntries.sort(function (a, b) {
-  return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
-});
-const res = await fetch("https://ethosphr.com/wp-json/wp/v2/posts")
-
-const posts = await res.json()
+const posts = await useSanityClient().fetch(`*[_type == "post" ] | order(publishedAt desc) {
+    title,
+    date,
+    mainImage,
+    category,
+    publishedAt,
+    author->{name},
+  }
+`);
 
 export function getStaticPaths () {
  return [
@@ -24,7 +23,6 @@ export function getStaticPaths () {
     {params: {lang: 'fr'}},
   ];
 }
-
 ---
 
 <Layout title="Blog">
@@ -38,38 +36,41 @@ export function getStaticPaths () {
     <main class="mt-16">
       <ul class="grid gap-16 max-w-4xl mx-auto">
         {
-          publishedBlogEntries.map((blogPostEntry, index) => (
+          posts.map((blogPostEntry, index) => (
             <li>
               <a href={`/blog/${blogPostEntry.slug}`}>
                 <div class="grid md:grid-cols-2 gap-5 md:gap-10 items-center">
-                  <Image
-                    src={blogPostEntry.data.image.src}
-                    alt={blogPostEntry.data.image.alt}
+                  { blogPostEntry.mainImage?.asset._ref &&
+                    <Image
+                    src={getSanityImageURL(blogPostEntry.mainImage.asset._ref)}
+                    alt=''
                     sizes="(max-width: 800px) 100vw, 800px"
                     width={200}
                     height={400}
                     loading={index <= 2 ? "eager" : "lazy"}
                     decoding={index <= 2 ? "sync" : "async"}
                     class="w-full rounded-md"
-                  />
+                    crossorigin="anonymous"
+                    />
+                  }
                   <div>
                     <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
-                      {blogPostEntry.data.category}
+                      {blogPostEntry.category}
                     </span>
 
                     <h2 class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
-                      {blogPostEntry.data.title}
+                      {blogPostEntry.title}
                     </h2>
 
                     <div class="flex gap-2 mt-3">
                       <span class="text-gray-400">
-                        {blogPostEntry.data.author}
+                        {blogPostEntry.author.name}
                       </span>
                       <span class="text-gray-400">• </span>
                       <time
                         class="text-gray-400"
-                        datetime={blogPostEntry.data.publishDate.toISOString()}>
-                        {blogPostEntry.data.publishDate.toDateString()}
+                        datetime={blogPostEntry.publishedAt}>
+                        {blogPostEntry.publishedAt.slice(0, -14)}
                       </time>
                     </div>
                   </div>
