--- a/src/pages/[lang]/missions.astro
+++ b/src/pages/[lang]/missions.astro
@@ -14,7 +14,8 @@ const missions = await useSanityClient().fetch(`*[_type == "missions"] {
     lieu,
     espece,
     date,
-    author
+    author,
+    _id
   }
 `);
 
@@ -35,6 +36,7 @@ export function getStaticPaths () {
     </Sectionhead>
     <div class="mt-16">
       {missions.map(m =>
+      <a href=`mission/${m._id}`>
         <div class="flex justify-items-center mt-4 bg-gray-100 border border-green-500 p-5 w-10/12 m-auto cursor-pointer hover:bg-green-500">
             <div class="flex grow-0 flex-col mx-auto">
                 <div class="flex flex-col gap-8">
@@ -70,6 +72,7 @@ export function getStaticPaths () {
                 </div>
             </div>
         </div>
+      </a>
       )}
     </div>
   </Container>
