--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,9 @@ const { title } = Astro.props;
 
 const lang = getLangFromUrl(Astro.url);
 const makeTitle = title ? ("Ethosph'R | " + currentPage) : "Ethosph'R";
+import { ViewTransitions } from 'astro:transitions';
+
+
 ---
 
 <!DOCTYPE html>
@@ -53,6 +56,8 @@ const makeTitle = title ? ("Ethosph'R | " + currentPage) : "Ethosph'R";
         },
       }}
     />
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <ViewTransitions />
   </head>
   <body>
     <Navbar />
