--- a/src/pages/[lang]/blog.astro
+++ b/src/pages/[lang]/blog.astro
@@ -7,16 +7,26 @@ import Sectionhead from "@components/sectionhead.astro";
 import { useSanityClient } from "@sanity/astro";
 import { getSanityImageURL } from "@utils/all";
 
-const posts = await useSanityClient().fetch(`*[_type == "post" ] {
-    title,
-    date,
-    mainImage,
-    category,
-    publishedAt,
-    author->{name},
-    slug,
-  }
-`);
+// const posts = await useSanityClient().fetch(`*[_type == "post" ] {
+//     title,
+//     date,
+//     mainImage,
+//     category,
+//     publishedAt,
+//     author->{name},
+//     slug,
+//   }
+// `);
+
+// Filter blog entries with 'draft: false' & date before current date
+const publishedBlogEntries = await getCollection("blog", ({ data }) => {
+  return !data.draft && data.publishDate < new Date();
+});
+
+// Sort content entries by publication date
+publishedBlogEntries.sort(function (a, b) {
+  return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+});
 
 export function getStaticPaths () {
  return [
@@ -37,14 +47,14 @@ export function getStaticPaths () {
     <main class="mt-16">
       <ul class="grid gap-16 max-w-4xl mx-auto">
         {
-          posts.map((blogPostEntry, index) => (
+          publishedBlogEntries.map((blogPostEntry, index) => (
             <li>
-              <a href={`/post/${blogPostEntry.slug.current}`}>
+              <a href={`/post/${blogPostEntry.slug}`}>
                 <div class="grid md:grid-cols-2 gap-5 md:gap-10 items-center">
-                  { blogPostEntry.mainImage?.asset._ref &&
+                  { blogPostEntry.data.image.src &&
                     <Image
-                    src={getSanityImageURL(blogPostEntry.mainImage.asset._ref)}
-                    alt=''
+                    src={blogPostEntry.data.image.src}
+                    alt={blogPostEntry.data.image.alt}
                     sizes="(max-width: 800px) 100vw, 800px"
                     width={200}
                     height={400}
@@ -56,22 +66,22 @@ export function getStaticPaths () {
                   }
                   <div>
                     <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
-                      {blogPostEntry.category}
+                      {blogPostEntry.data.category}
                     </span>
 
                     <h2 class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
-                      {blogPostEntry.title}
+                      {blogPostEntry.data.title}
                     </h2>
 
                     <div class="flex gap-2 mt-3">
                       <span class="text-gray-400">
-                        {blogPostEntry.author.name}
+                        {blogPostEntry.data.author}
                       </span>
                       <span class="text-gray-400">• </span>
                       <time
                         class="text-gray-400"
-                        datetime={blogPostEntry.publishedAt}>
-                        {blogPostEntry.publishedAt.slice(0, -14)}
+                        datetime={blogPostEntry.data.publishDate.toISOString()}>
+                        {blogPostEntry.data.publishDate.toDateString()}
                       </time>
                     </div>
                   </div>
