--- a/src/pages/[lang]/team.astro
+++ b/src/pages/[lang]/team.astro
@@ -22,50 +22,46 @@ export function getStaticPaths () {
 }
 ---
 
-<Layout title="Missions">
+<Layout title="Notre équipe">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">{t('page.missions.title')}</Fragment>
-      <Fragment slot="desc">{t('page.missions.subtitle')}
+      <Fragment slot="title">{t('page.team.title')}</Fragment>
+      <Fragment slot="desc">{t('page.team.subtitle')}
     </Fragment>
     </Sectionhead>
 
-    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
-      <h2 class="font-bold text-3xl text-gray-800">
-        Empowering the world with Astro.
-      </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        We're a multi-cultural team from around the world! We come from diverse
-        backgrounds, bringing different personalities, experiences and skills to
-        the job. This is what makes our team so special.
-      </p>
-    </div>
-    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
-      {
-        publishedTeamMembers.map((teamMemberEntry) => (
-          <div class="group">
-            <div class="w-full aspect-square">
-              <Image
-                src={teamMemberEntry.data.avatar.src}
-                alt={teamMemberEntry.data.avatar.alt}
-                sizes="(max-width: 800px) 100vw, 400px"
-                width={200}
-                height={400}
-                class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl"
-              />
-            </div>
+    <div x-data="{ currentUser: { name: '', description: '' } }" class="flex">
+      <div class="flex flex-col gap-3 mx-auto max-w-4xl my-16">
+        <h2 x-text="currentUser.name" class="font-bold text-3xl text-gray-800"></h2>
+        <p x-text="currentUser.description" class="text-lg leading-relaxed text-slate-500"></p>
+      </div>
+      <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+        {
+          publishedTeamMembers.map((teamMemberEntry) => (
+            <div class="group" x-data={`{ user: {name: '${teamMemberEntry.data.name}', description: '${teamMemberEntry.data.description}', title: '${teamMemberEntry.data.title}'}}`} >
+              <a href={`user/${teamMemberEntry.slug}`} class="w-full aspect-square">
+                <Image
+                  src={teamMemberEntry.data.avatar.src}
+                  alt={teamMemberEntry.data.avatar.alt}
+                  sizes="(max-width: 800px) 100vw, 400px"
+                  width={200}
+                  height={400}
+                  class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl"
+                />
+              </a>
 
-            <div class="mt-4 text-center">
-              <h2 class="text-lg text-gray-800">
-                {teamMemberEntry.data.name}
-              </h2>
-              <h3 class="text-sm text-slate-500">
-                {teamMemberEntry.data.title}
-              </h3>
+              <div class="mt-4 text-center">
+                <h2 class="text-lg text-gray-800">
+                  {teamMemberEntry.data.name}
+                </h2>
+                <h3 class="text-sm text-slate-500">
+                  {teamMemberEntry.data.title}
+                </h3>
+              </div>
             </div>
-          </div>
-        ))
-      }
+          ))
+        }
+      </div>
     </div>
   </Container>
 </Layout>
