--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@components/container.astro";
 import Link from "@components/ui/link.astro";
+import R from "@components/ui/icons/r.astro";
 import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
@@ -55,7 +56,7 @@ const currentPath = pathname.slice(4); // remove the first "/"
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg">
             <span class="font-bold text-slate-800">Ethosph'</span>
-            <span class="text-green-500 animate-pulse">R</span>
+            <R class="w-10"/>
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
