--- a/src/pages/[lang]/missions.astro
+++ b/src/pages/[lang]/missions.astro
@@ -1,23 +1,24 @@
 ---
+import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-import { useSanityClient } from "@sanity/astro";
 import Icon from "astro-icon";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
-const missions = await useSanityClient().fetch(`*[_type == "missions"] {
-    title,
-    lieu,
-    espece,
-    date,
-    author,
-    _id
-  }
-`);
+
+// Filter blog entries with 'draft: false' & date before current date
+const publishedMissionEntries = await getCollection("missions", ({ data }) => {
+  return data.publishDate < new Date();
+});
+
+// Sort content entries by publication date
+publishedMissionEntries.sort(function (a, b) {
+  return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+});
 
 export function getStaticPaths () {
  return [
@@ -34,41 +35,44 @@ export function getStaticPaths () {
       <Fragment slot="desc">{t('page.missions.subtitle')}
     </Fragment>
     </Sectionhead>
+    <input>
     <div class="mt-16">
-      {missions.map(m =>
-      <a href=`mission/${m._id}`>
+      {publishedMissionEntries.map(m =>
+      <a href={`/mission/${m.slug}`}>
         <div class="flex justify-items-center mt-4 bg-gray-100 border border-green-500 p-5 w-10/12 m-auto cursor-pointer hover:bg-green-500">
             <div class="flex grow-0 flex-col mx-auto">
                 <div class="flex flex-col gap-8">
                     <h2 class="font-bold text-2xl text-gray-800 m-auto text-center">
-                        {m.title}
+                        {m.data.title}
                     </h2>
                     <div class="flex gap-10 justify-center">
                         <div class="flex">
                             <Icon class="text-black block w-6 h-6" name="bx:bx-map" />
                             <div class="my-auto">
-                              {m.lieu}
+                              {m.data.location}
                             </div>
                         </div>
                         <div class="flex">
                             <Icon class="text-black block w-6 h-6" name="bx:bx-calendar" />
                             <div class="my-auto">
-                                {m.date}
+                                {m.data.year}
                             </div>
                         </div>
                         <div class="flex">
                             <Icon class="text-black block w-6 h-6" name="bx:bx-dna" />
                             <div class="my-auto">
-                              {m.espece}
+                              {m.data.species}
                             </div>
                         </div>
-                        <div class="flex">
+                        <!--
+                          <div class="flex">
                             <Icon class="text-black block w-6 h-6" name="bx:bx-user-circle" />
                             <div class="my-auto">
-                              {m.author}
+                              {m.data.author ?? "Anonyme"}
                             </div>
-                        </div>
-                    </div>
+                          </div>
+                          -->
+                      </div>
                 </div>
             </div>
         </div>
