--- a/src/components/navbar/languageswitcher.astro
+++ b/src/components/navbar/languageswitcher.astro
@@ -4,10 +4,11 @@ import { languages } from '../../i18n/ui';
 const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(4); // remove the first "/"
 const currentLang = Astro.params.lang as string;
+const invisible = currentLang == null;
 ---
-<div class="flex">
+<div class={`flex ${invisible ? 'opacity-0 pointer-events-none' : ''}`}>
   {Object.entries(languages).map(([lang, label]) => (
-    <a class={`px-3 py-1.5 last:rounded-r border-2 border-slate-900 first:rounded-l ${currentLang === lang ? 'text-white bg-slate-900': ''}`}
+    <a class={`px-3 py-1.5 last:rounded-r border-2 border-slate-900 first:rounded-l first:border-r-0 ${currentLang === lang ? 'text-white bg-slate-900': ''}`}
        href={`/${lang}/${currentPath}`}
     >
       {label}
