--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -63,7 +63,7 @@ const currentPath = pathname.slice(4); // remove the first "/"
         </div>
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="flex flex-col lg:flex-row lg:gap-3 mr-12">
+        <ul class="flex flex-col lg:flex-row lg:gap-3 lg:mr-12">
           {
             menuitems.map((item, index) => (
               <>
