updated team members and added specialists page

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -41,6 +41,10 @@ const menuitems = [
     path: `team`,
   },
   {
+    string: "nav.poles",
+    path: `poles`,
+  },
+  {
     string: "nav.contact",
     path: `contact`,
   },
