--- a/src/pages/[lang]/team.astro
+++ b/src/pages/[lang]/team.astro
@@ -23,29 +23,24 @@ export function getStaticPaths () {
 ---
 
 <Layout title="Notre équipe">
-  <Container>
+  <Container class="flex flex-col justify-center">
     <Sectionhead>
       <Fragment slot="title">{t('page.team.title')}</Fragment>
-      <Fragment slot="desc">{t('page.team.subtitle')}
-    </Fragment>
+      <Fragment slot="desc">{t('page.team.subtitle')}</Fragment>
     </Sectionhead>
 
-    <div x-data="{ currentUser: { name: '', description: '' } }" class="flex">
-      <div class="flex flex-col gap-3 mx-auto max-w-4xl my-16">
-        <h2 x-text="currentUser.name" class="font-bold text-3xl text-gray-800"></h2>
-        <p x-text="currentUser.description" class="text-lg leading-relaxed text-slate-500"></p>
-      </div>
-      <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+    <h3 class="text-center text-2xl pt-24">Le conseil d'Administration</h3>
+    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
         {
-          publishedTeamMembers.map((teamMemberEntry) => (
+          publishedTeamMembers.filter(m => m.data.groups.includes('conseil')).map((teamMemberEntry) => (
             <div class="group" x-data={`{ user: {name: '${teamMemberEntry.data.name}', description: '${teamMemberEntry.data.description}', title: '${teamMemberEntry.data.title}'}}`} >
               <a href={`user/${teamMemberEntry.slug}`} class="w-full aspect-square">
                 <Image
                   src={teamMemberEntry.data.avatar.src}
                   alt={teamMemberEntry.data.avatar.alt}
                   sizes="(max-width: 800px) 100vw, 400px"
-                  width={200}
-                  height={400}
+                  width={400}
+                  height={800}
                   class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl"
                 />
               </a>
@@ -62,6 +57,54 @@ export function getStaticPaths () {
           ))
         }
       </div>
-    </div>
+
+    <h3 class="text-center text-2xl pt-24">Les membres d'honneur</h3>
+    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+        {
+          publishedTeamMembers.filter(m => m.data.groups.includes('honneur')).map((teamMemberEntry) => (
+            <div class="group" x-data={`{ user: {name: '${teamMemberEntry.data.name}', description: '${teamMemberEntry.data.description}', title: '${teamMemberEntry.data.title}'}}`} >
+              <a href={`user/${teamMemberEntry.slug}`} class="w-full aspect-square">
+                <Image
+                  src={teamMemberEntry.data.avatar.src}
+                  alt={teamMemberEntry.data.avatar.alt}
+                  sizes="(max-width: 800px) 100vw, 400px"
+                  width={400}
+                  height={800}
+                  class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl"
+                />
+              </a>
+
+              <div class="mt-4 text-center">
+                <h2 class="text-lg text-gray-800">
+                  {teamMemberEntry.data.name}
+                </h2>
+                <h3 class="text-sm text-slate-500">
+                  {teamMemberEntry.data.title}
+                </h3>
+              </div>
+            </div>
+          ))
+        }
+      </div>
+
+      <h3 class="text-center text-2xl pt-24 pb-4">Les fondatrices</h3>
+      <Image
+        src="/src/assets/wordpress_media_library/irlteamlow.png"
+        alt="Photo des fondatrices de l'association"
+        sizes="(max-width: 800px) 100vw, 400px"
+        width={400}
+        height={800}
+        class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl"
+      />
+      <div class="flex gap-4 justify-between px-20 pt-2">
+        <div>Laure Hoenen</div>
+        <div>Sarah Lux</div>
+        <div>Céline Bret</div>
+        <div>Léa Briard</div>
+        <div>Amélie Romain</div>
+        <div>Odile Petit</div>
+      </div>
+
+<div class="text-center pt-4">Une fondatrice ne figure pas sur la photo: Mathilde Valenchon.</div>
   </Container>
 </Layout>
