--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -67,7 +67,7 @@ const currentPath = pathname.slice(4); // remove the first "/"
         </div>
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="flex flex-col lg:flex-row lg:gap-3">
+        <ul class="flex flex-col lg:flex-row lg:gap-3 lg:mr-12">
           {
             menuitems.map((item, index) => (
               <>
@@ -97,8 +97,8 @@ const currentPath = pathname.slice(4); // remove the first "/"
           <Link href="#" style="muted" block size="md">Log in</Link>
           <Link href="#" size="md" block>Sign up</Link>
         </div> -->
+        <Languageswitcher />
       </MenuItems>
-      <Languageswitcher />
     </Astronav>
     <!-- <div>
       <div class="hidden lg:flex items-center gap-4">
