--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -93,18 +93,18 @@ const currentPath = pathname.slice(4); // remove the first "/"
             ))
           }
         </ul>
-        <!-- <div class="lg:hidden flex items-center mt-3 gap-4">
+        <div class="lg:hidden flex items-center mt-3 gap-4">
           <Link href="#" style="muted" block size="md">Log in</Link>
           <Link href="#" size="md" block>Sign up</Link>
-        </div> -->
+        </div>
         <Languageswitcher />
       </MenuItems>
     </Astronav>
-    <!-- <div>
+    <div>
       <div class="hidden lg:flex items-center gap-4">
         <a href="#">Log in</a>
         <Link href="#" size="md">Sign up</Link>
       </div>
-    </div> -->
+    </div>
   </header>
 </Container>
