--- a/src/pages/[lang]/poles.astro
+++ b/src/pages/[lang]/poles.astro
@@ -1,11 +1,13 @@
 ---
-import { Icon } from "astro-icon";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Contactform from "@components/contactform.astro";
 import { getLangFromUrl, useTranslations } from "i18n/utils";
 import { Image } from "astro:assets";
+
+import schmitt from "../../../src/assets/wordpress_media_library/DSCF0901-scaled.jpg";
+import laneyrie from "../../../src/assets/wordpress_media_library/IMG_8898.jpg";
+
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
@@ -32,7 +34,7 @@ export function getStaticPaths () {
             <div class="flex flex-col justify-center text-center">
                 <div class="pb-2"><b>Océane Schmitt</b></div>
                 <Image
-                     src="/src/assets/wordpress_media_library/DSCF0901-scaled.jpg"
+                    src={schmitt}
                     alt="Océane Schmitt"
                     class="border-1 border-green-500"
                     sizes="(max-width: 800px) 100vw, 400px"
@@ -58,7 +60,7 @@ export function getStaticPaths () {
             <div class="flex flex-col justify-center text-center">
                 <div class="pb-2"><b>Laurette Laneyrie</b></div>
                 <Image
-                     src="/src/assets/wordpress_media_library/IMG_8898.jpg"
+                    src={laneyrie}
                     alt="Laurette Laneyrie"
                     class="border-1 border-green-500"
                     sizes="(max-width: 1200px) 100vw, 400px"
