--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -3,18 +3,22 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import { getLangFromUrl } from "i18n/utils";
 import { getCollection, getEntry } from "astro:content";
-
-
+import Prose from "@components/Prose.astro";
 export async function getStaticPaths() {
   // Filter blog entries with 'draft: false' & date before current date
   const posts = await getCollection("blog", ({ data }) => {
     return !data.draft && data.publishDate < new Date();
   });
 
-  return posts.map(({ slug, data: {title, category, author, publishDate: publishedAt } }) => ({
-    params: { slug: slug },
-    props: { title, category, author, publishedAt, videos: [] },
-  }));
+  return posts.map(
+    ({
+      slug,
+      data: { title, category, author, publishDate: publishedAt },
+    }) => ({
+      params: { slug: slug },
+      props: { title, category, author, publishedAt, videos: [] },
+    })
+  );
 }
 
 const lang = getLangFromUrl(Astro.url);
@@ -25,9 +29,9 @@ const Body = await (await getEntry("blog", Astro.params.slug)).render();
 
 <Layout title={title}>
   <Container>
-    <div class="mx-auto max-w-[735px] mt-14">
+    <div class="mx-auto max-w-[1280px] mt-14">
       <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
-        {category ?? 'undefined'}
+        {category ?? "undefined"}
       </span>
       <h1
         class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight">
@@ -38,9 +42,7 @@ const Body = await (await getEntry("blog", Astro.params.slug)).render();
           {author}
         </span>
         <span class="text-gray-400">•</span>
-        <time
-          class="text-gray-400"
-          datetime={publishedAt.toDateString()}>
+        <time class="text-gray-400" datetime={publishedAt.toDateString()}>
           {publishedAt.toDateString()}
         </time>
         <!-- <span class="text-gray-400 hidden md:block">•</span> -->
@@ -54,15 +56,19 @@ const Body = await (await getEntry("blog", Astro.params.slug)).render();
       </div>
     </div>
 
-    <div class="mx-auto prose prose-lg mt-6">
+    <div
+      class="mx-auto prose prose-lg max-w-[1280px] prose-h1:font-bold prose-h1:text-xl
+  prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl prose-img:mx-auto mt-6">
       <!-- <Content /> -->
       <Body.Content />
-        { /* videos &&
+      {
+        /* videos &&
           <video width="320" height="240" controls class="m-auto">
             <source src={getSanityFileURL(videos.asset._ref)} type="video/mp4">
             <!-- <source src="movie.ogg" type="video/ogg"> -->
           </video>
-        */ }
+        */
+      }
     </div>
     <div class="text-center mt-8">
       <a
